package src.compiler.lib;

public abstract class DecNode extends Node {

    protected TypeNode type;

    public TypeNode getType() {
        return this.type;
    }

}
